# File-Sync

./: .gitignore  CMakeLists.txt  README.md  build.bat  vcpkg.json
include/: client.h  sion.h
include/json/: assertions.h
src/: client.cpp  client.h  main.cpp
